--- a/Ejercicio_1/index.html
+++ b/Ejercicio_1/index.html
@@ -3,12 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Archivos_css/indexview.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title> Ejercicio 1 | Academia de idiomas </title>
+
+    <style>
+        body{
+            font-family: Arial, Helvetica, sans-serif;
+            background-color: aliceblue;
+            padding: 160px;
+        }
+        h1{
+            font-weight: bold;
+        }
+        label{
+            font-weight: bold;
+        }
+        input{
+            font-weight: bold;
+            padding: 5px;
+            width: 350px;
+            background-color: lightgray;
+        }
+    </style>
 </head>
 <body>
-    <h1 align="center" style="font-family: arial; font-size: 24px; padding: 20px;">Academia de idiomas "UDB" :</h1>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <h1 align="center" style="font-family: arial; font-size: 30px; border-bottom: 20px; margin-top: 25px;">"Academia de idiomas Universidad Don Bosco"</h1>
     <fieldset>
-        <form action="//Archivos_php/a_arreglos_asociativos.php" method="post">
+        <form action="a_arreglos_asociativos.php" method="post">
             <div align="center">
                 <br>
                 <label name="label_idiomas" for="br">Seleccione un curso de idiomas:</label>
