--- a/Ejercicio_1/index.html
+++ b/Ejercicio_1/index.html
@@ -31,7 +31,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <h1 align="center" style="font-family: arial; font-size: 30px; border-bottom: 20px; margin-top: 25px;">"Academia de idiomas Universidad Don Bosco"</h1>
     <fieldset>
-        <form action="a_arreglos_asociativos.php" method="post">
+        <form action="a_arreglos_asociativos.php" method="post" id="form">
             <div align="center">
                 <br>
                 <label name="label_idiomas" for="br">Seleccione un curso de idiomas:</label>
@@ -57,5 +57,27 @@
             </div>
         </form>
     </fieldset>
+
+    <script>
+        let cmbMetodo = document.getElementById("op");
+        cmbMetodo.onchange = (event) => {
+
+            let metodo = event.target.value;
+
+            switch(metodo){
+                case "opcion_a":
+                    document.getElementById("form").action = "a_arreglos_asociativos.php";
+                    break;
+                
+                case "opcion_b":
+                    document.getElementById("form").action = "b_array_anidado.php";
+                    break;
+
+                case "opcion_c":
+                    document.getElementById("form").action = "c_arreglo_mixto.php";
+                    break;
+            }
+        }
+    </script>
 </body>
 </html>
